[gd_scene load_steps=10 format=3 uid="uid://bx0cn133vx2x4"]

[ext_resource type="Script" uid="uid://dh6njmuxh0ww2" path="res://scripts/flujo/Game.gd" id="1_ab273"]
[ext_resource type="PackedScene" uid="uid://cagciatay3u85" path="res://scenes/andres_scene.tscn" id="2_pa1jb"]
[ext_resource type="PackedScene" uid="uid://bqjc8a26hvd3g" path="res://assets/models/botones/next.fbx" id="3_l2ljc"]
[ext_resource type="PackedScene" uid="uid://b5wxiayqtex8o" path="res://scenes/flujo/reset.tscn" id="4_2jtgr"]
[ext_resource type="Script" uid="uid://cchiii0apdegl" path="res://scripts/silhouette_button.gd" id="4_6wywq"]
[ext_resource type="Script" uid="uid://b58bae3a7h15w" path="res://scenes/flujo/button_reset.gd" id="4_l2ljc"]
[ext_resource type="PackedScene" uid="uid://dgdvboufg10pc" path="res://scenes/dialogo/dialogueBox.tscn" id="5_6wywq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fg5qh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2jtgr"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ab273")

[node name="AndresScene" parent="." instance=ExtResource("2_pa1jb")]
visible = false

[node name="next" parent="AndresScene" instance=ExtResource("3_l2ljc")]
transform = Transform3D(0.566464, -0.197777, 0.00175013, 0, -0.00530921, -0.599977, 0.197785, 0.566442, -0.00501246, 3.56726, 2.4921, -1.42884)

[node name="reset" parent="AndresScene" instance=ExtResource("4_2jtgr")]
transform = Transform3D(0.552299, 0.234439, -0.00207456, 0, -0.00530921, -0.599977, -0.234448, 0.552277, -0.00488712, -3.96869, 1.75924, -1.07278)

[node name="DebugNivel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Nivel"

[node name="ButtonReset" type="Button" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 82.0
offset_right = 262.0
offset_bottom = 218.0
scale = Vector2(1.22334, 1.18463)
theme_override_styles/focus = SubResource("StyleBoxEmpty_fg5qh")
flat = true
clip_text = true
script = ExtResource("4_l2ljc")

[node name="ButtonConfirm" type="Button" parent="."]
layout_mode = 0
offset_left = 940.0
offset_top = 64.0
offset_right = 1111.0
offset_bottom = 200.0
scale = Vector2(1.44329, 1.06879)
theme_override_styles/focus = SubResource("StyleBoxEmpty_2jtgr")
flat = true
clip_text = true
script = ExtResource("4_6wywq")

[node name="DialogueBox" parent="." instance=ExtResource("5_6wywq")]
offset_left = 338.0
offset_top = 427.0
offset_right = 338.0
offset_bottom = 427.0

[connection signal="button_down" from="ButtonReset" to="AndresScene" method="reset_pos"]
[connection signal="mouse_entered" from="ButtonReset" to="ButtonReset" method="_on_button_reset_mouse_entered"]
[connection signal="mouse_exited" from="ButtonReset" to="ButtonReset" method="_on_button_reset_mouse_exited"]
[connection signal="pressed" from="ButtonReset" to="ButtonReset" method="_on_pressed"]
[connection signal="mouse_entered" from="ButtonConfirm" to="ButtonConfirm" method="_on_button_confirm_mouse_entered"]
[connection signal="mouse_exited" from="ButtonConfirm" to="ButtonConfirm" method="_on_button_confirm_mouse_exited"]
[connection signal="pressed" from="ButtonConfirm" to="ButtonConfirm" method="_on_pressed"]
